--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ h1 {vertical-align:top;margin-bottom:40px;}
     						<input type="radio" value="0" name="sex" /> ALL
   						</label>
 						<label class="radio inline">
-    						<input type="radio" value-"1" name="sex" /> M
+    						<input type="radio" value="1" name="sex" /> M
   						</label>
   						<label class="radio inline">
     						<input type="radio" value="2" name="sex" /> F
