--- a/tests/model.html
+++ b/tests/model.html
@@ -7,11 +7,11 @@
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />
   <script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
-  <script type="text/javascript" src="../../../mod/klass/klass.js"></script>
-  <script type="text/javascript" src="../../../mod/backbone/backbone.events.js"></script>
+  <script type="text/javascript" src="https://raw.github.com/ded/klass/master/klass.min.js"></script>
+  <script type="text/javascript" src="../deps/backbone.events.js"></script>
   <script type="text/javascript" src="../static/tablesearch-p.js"></script>
   <!-- Source and test files go here -->
-  <script type="text/javascript" src="../tests/modelTest.js"></script>
+  <script type="text/javascript" src="modelTest.js"></script>
 </head>
 <body>
   <h1 id="qunit-header">QUnit/Model Test</h1>
